fix some spacing

--- a/jessica.css
+++ b/jessica.css
@@ -38,3 +38,6 @@ body {
     padding-top: 3vh;
     padding-bottom: 3vh;
 }
+.sarc{
+    margin-bottom: 0px;
+}
